feat: finish distribution