@@ -1,21 +1,24 @@
 package fr.insee.rmes.integration.authorizations;
 
 import fr.insee.rmes.bauhaus_services.datasets.DatasetService;
-import fr.insee.rmes.config.auth.roles.Roles;
-import fr.insee.rmes.config.auth.user.Stamp;
 import fr.insee.rmes.integration.AbstractResourcesEnvProd;
-import fr.insee.rmes.model.dataset.Dataset;
+import fr.insee.rmes.rbac.RBAC;
 import fr.insee.rmes.webservice.datasets.DatasetResources;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.stream.Stream;
 
 import static fr.insee.rmes.integration.authorizations.TokenForTestsConfiguration.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -39,290 +42,181 @@ class TestDatasetsResourcesEnvProd extends AbstractResourcesEnvProd {
     @MockitoBean
     DatasetService datasetService;
 
-    private static Dataset dataset;
 
     private final String idep = "xxxxxx";
     private final String timbre = "XX59-YYY";
 
-    int datasetId=10;
+    private static Stream<Arguments> provideDataForGetEndpoints() {
+        return Stream.of(
+                Arguments.of("/datasets", 200, true, true),
+                Arguments.of("/datasets/1", 200, true, true),
+                Arguments.of("/datasets/1/distributions", 200, true, true),
 
+                Arguments.of("/datasets", 403, true, false),
+                Arguments.of("/datasets/1", 403, true, false),
+                Arguments.of("/datasets/1/distributions", 403, true, false),
 
-
-    @Test
-    void shouldGetDatasetsWithAnyRole() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-
-        mvc.perform(get("/datasets").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDatasetsWhenAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-
-        mvc.perform(get("/datasets").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDatasetsWhenDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-
-        mvc.perform(get("/datasets").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDatasetWithAnyRole() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-
-        mvc.perform(get("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDatasetWhenAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-
-        mvc.perform(get("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDatasetWhenDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-
-        mvc.perform(get("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionsWithAnyRole() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-
-        mvc.perform(get("/datasets/" + datasetId + "/distributions").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionsWhenAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-
-        mvc.perform(get("/datasets/" + datasetId + "/distributions").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionsWhenDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-
-        mvc.perform(get("/datasets/" + datasetId + "/distributions").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldCreateADatasetIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(post("/datasets/").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isCreated());
-    }
-
-    @Test
-    void shouldCreateADatasetIfDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(post("/datasets/").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isCreated());
-    }
-
-    @Test
-    void shouldNotCreateADataset() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(post("/datasets/").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldUpdateADatasetIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(put("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldUpdateADatasetIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldNotUpdateADatasetIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldNotUpdateADataset() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(put("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldPublishADatasetIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(put("/datasets/" + datasetId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldPublishADatasetIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/datasets/" + datasetId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldNotPublishADatasetIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/datasets/" + datasetId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldNotPublisheADataset() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(put("/datasets/" + datasetId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldDeleteADatasetIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        dataset=new Dataset();
-        dataset.setValidationState("Unpublished");
-        mvc.perform(delete("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldDeleteADatasetIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        dataset=new Dataset();
-        dataset.setValidationState("Unpublished");
-        mvc.perform(delete("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+                Arguments.of("/datasets", 401, false, true),
+                Arguments.of("/datasets/1", 401, false, true),
+                Arguments.of("/datasets/1/distributions", 401, false, true)
+        );
     }
 
 
-    @Test
-    void shouldNotDeleteADatasetIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(delete("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
+    @MethodSource("provideDataForGetEndpoints")
+    @ParameterizedTest
+    void getData(String url, Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DATASET.toString()), eq(RBAC.Privilege.READ.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = get(url).contentType(MediaType.APPLICATION_JSON).accept(MediaType.APPLICATION_JSON);
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
     }
 
-    @Test
-    void shouldNotDeleteADataset() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(delete("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
-    }
+    private static Stream<Arguments> provideDataForPostEndpoints() {
+        return Stream.of(
+                Arguments.of(201, true, true),
 
-    @Test
-    void shouldPatchADatasetIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(patch("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"numObservations\": 1}"))
-                .andExpect(status().isOk());
-    }
+                Arguments.of(403, true, false),
 
-    @Test
-    void shouldPatchADatasetIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(patch("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"numObservations\": 1}"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldNotPatchADatasetIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDatasetManagerWithStamp(String.valueOf(datasetId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(patch("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"numObservations\": 1}"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldNotPatchADataset() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(patch("/datasets/" + datasetId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"numObservations\": 1}"))
-                .andExpect(status().isForbidden());
+                Arguments.of(401, false, true)
+        );
     }
 
 
+    @MethodSource("provideDataForPostEndpoints")
+    @ParameterizedTest
+    void create(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DATASET.toString()), eq(RBAC.Privilege.CREATE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+        var request = post("/datasets")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
+
+
+    private static Stream<Arguments> provideDataForPutEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForPutEndpoints")
+    @ParameterizedTest
+    void update(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DATASET.toString()), eq(RBAC.Privilege.UPDATE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+        var request = put("/datasets/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
+
+
+    private static Stream<Arguments> provideDataForPublishEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForPublishEndpoints")
+    @ParameterizedTest
+    void publish(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DATASET.toString()), eq(RBAC.Privilege.PUBLISH.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+        var request = put("/datasets/1/validate")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
+
+    private static Stream<Arguments> provideDataForDeleteEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForDeleteEndpoints")
+    @ParameterizedTest
+    void deleteDataset(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DATASET.toString()), eq(RBAC.Privilege.DELETE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+        var request = delete("/datasets/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON);
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
+
+
+    private static Stream<Arguments> provideDataForPatchEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForPatchEndpoints")
+    @ParameterizedTest
+    void patchDataset(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DATASET.toString()), eq(RBAC.Privilege.UPDATE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+        var request = patch("/datasets/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"numObservations\": 1}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
 }
