@@ -3,20 +3,24 @@ package fr.insee.rmes.integration.authorizations;
 
 import fr.insee.rmes.bauhaus_services.datasets.DatasetService;
 import fr.insee.rmes.bauhaus_services.distribution.DistributionService;
-import fr.insee.rmes.config.auth.roles.Roles;
-import fr.insee.rmes.config.auth.user.Stamp;
 import fr.insee.rmes.integration.AbstractResourcesEnvProd;
+import fr.insee.rmes.rbac.RBAC;
 import fr.insee.rmes.webservice.datasets.DistributionResources;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.stream.Stream;
 
 import static fr.insee.rmes.integration.authorizations.TokenForTestsConfiguration.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -47,208 +51,152 @@ class TestDistributionsResourcesEnvProd extends AbstractResourcesEnvProd {
 
     int distributionId =10;
 
-    @Test
-    void shouldGetDistributionsWithAnyRole() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
+    private static Stream<Arguments> provideDataForGetEndpoints() {
+        return Stream.of(
+                Arguments.of("/distribution", 200, true, true),
+                Arguments.of("/distribution/1", 200, true, true),
 
-        mvc.perform(get("/distribution").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
+                Arguments.of("/distribution", 403, true, false),
+                Arguments.of("/distribution/1", 403, true, false),
 
-    @Test
-    void shouldGetDistributionsWhenAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-
-        mvc.perform(get("/distribution").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionsWhenDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-
-        mvc.perform(get("/distribution").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionWithAnyRole() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-
-        mvc.perform(get("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionWhenAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-
-        mvc.perform(get("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldGetDistributionWhenDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-
-        mvc.perform(get("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+                Arguments.of("/distribution", 401, false, true),
+                Arguments.of("/distribution/1", 401, false, true)
+        );
     }
 
 
-    @Test
-    void shouldCreateADistributionIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(post("/distribution/").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isCreated());
-    }
+    @MethodSource("provideDataForGetEndpoints")
+    @ParameterizedTest
+    void getData(String url, Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DISTRIBUTION.toString()), eq(RBAC.Privilege.READ.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
 
-    @Test
-    void shouldCreateADistributionIfDatasetContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(post("/distribution/").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isCreated());
-    }
+        var request = get(url).contentType(MediaType.APPLICATION_JSON).accept(MediaType.APPLICATION_JSON);
 
-    @Test
-    void shouldNotCreateADistribution() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(post("/distribution/").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
 
-    @Test
-    void shouldUpdateADistributionIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(put("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldUpdateADistributionIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDistributionManagerWithStamp(String.valueOf(distributionId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldNotUpdateADistributionIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDistributionManagerWithStamp(String.valueOf(distributionId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldNotUpdateADistribution() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(put("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldPublishADistributionIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(put("/distribution/" + distributionId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldPublishADistributionIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDistributionManagerWithStamp(String.valueOf(distributionId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/distribution/" + distributionId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldNotPublishADistributionIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDistributionManagerWithStamp(String.valueOf(distributionId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(put("/distribution/" + distributionId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldNotPublisheADistribution() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(put("/distribution/" + distributionId + "/validate").header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void shouldDeleteADistributionIfAdmin() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(delete("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void shouldDeleteADistributionIfDatasetContributorBasedOnStamp() throws Exception {
-        when(stampAuthorizationChecker.isDistributionManagerWithStamp(String.valueOf(distributionId),new Stamp(timbre))).thenReturn(true);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(delete("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+        mvc.perform(request).andExpect(status().is(code));
     }
 
 
-    @Test
-    void shouldNotDeleteADistributionIfDatasetContributorWithoutStamp() throws Exception {
-        when(stampAuthorizationChecker.isDistributionManagerWithStamp(String.valueOf(distributionId),new Stamp(timbre))).thenReturn(false);
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.DATASET_CONTRIBUTOR));
-        mvc.perform(delete("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
+
+    private static Stream<Arguments> provideDataForPostEndpoints() {
+        return Stream.of(
+                Arguments.of(201, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
     }
 
-    @Test
-    void shouldNotDeleteADistribution() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of());
-        mvc.perform(delete("/distribution/" + distributionId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
+
+    @MethodSource("provideDataForPostEndpoints")
+    @ParameterizedTest
+    void create(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DISTRIBUTION.toString()), eq(RBAC.Privilege.CREATE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = post("/distribution")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
     }
 
+
+
+    private static Stream<Arguments> provideDataForPutEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForPutEndpoints")
+    @ParameterizedTest
+    void update(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DISTRIBUTION.toString()), eq(RBAC.Privilege.UPDATE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = put("/distribution/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
+
+    private static Stream<Arguments> provideDataForPublishEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForPublishEndpoints")
+    @ParameterizedTest
+    void publish(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DISTRIBUTION.toString()), eq(RBAC.Privilege.PUBLISH.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = put("/distribution/1/validate")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
+
+
+    private static Stream<Arguments> provideDataForDeleteEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false),
+
+                Arguments.of(401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForDeleteEndpoints")
+    @ParameterizedTest
+    void deleteDistribution(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.DATASET_DISTRIBUTION.toString()), eq(RBAC.Privilege.DELETE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = delete("/distribution/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON);
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
+    }
 }
